<resources>
    <string name="app_name">Blish-Onlien Flower and Cake</string>
    <string name="Log_in">Log In</string>
    <string name="sign_in">Sign Up</string>
    <string name="app_welcome">Welcome To Blish</string>
    <string name="Password_login">Password</string>
    <string name="Username_login">Username</string>
    <string name="Rememberme">Remember Me</string>
    <string name="Username_sign_in">Username</string>
    <string name="Email_sign_in">E-mail</string>
    <string name="Contact_no_sign_in">Contact No.</string>
    <string name="Address_sign_in">Address</string>
    <string name="Password_sign_in">Password</string>
    <string name="Confirm_Password_sign_in">Confirm Password</string>
    <string name="Login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_for">Forgot your password?</string>
    <string name="pass_forgate">Forgot your Password</string>
    <string name="Forgrt">Forgot password?</string>
    <string name="fp_message"> We just need your registered Email id or mobile number to send you password reset instructions.</string>
    <string name="e_or_m">Enter Your Email</string>
    <string name="reset_pass">reset password</string>
    <string name="back"><![CDATA[<<Back]]></string>
    <string name="home">Home</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="add">Add to Cart</string>
    <string name="youtorder">Your Order</string>
    <string name="wis">Your Wish List</string>
    <string name="account">Your Account</string>
    <string name="Custom">Your Customisation</string>
    <string name="deal">Today\'s Deals</string>
    <string name="setting">Setting</string>
    <string name="service">Customer Service</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Search">Search</string>
    <string name="title_activity_navigation_bar">navigation_bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">Home_page</string>
    <string name="user_email">Useremail@gmail.com</string>
    <string name="User">User Name</string>
    <string name="category">Category</string>
    <string name="title_activity_account_setting">My Account</string>
    <string name="Reviews_Rating"><![CDATA[Review & Rating]]></string>
    <string name="buy">Buy Now</string>
    <string name="title_activity_product_all_detail">product_all_detail</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="productName">Product name</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="more_ingo">More info</string>
    <string name="Posting_packing"><![CDATA[Posting & Packing]]></string>
    <string-array name="Category">
        <item>All</item>
        <item>Cake</item>
        <item>Flower</item>
        <item>Toy</item>
    </string-array>


</resources>
