<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".forgot_password_page">

    <TextView
        android:id="@+id/tv_1_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgrt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="30sp"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/fp_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_1_fp"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/fp_message"/>

    <TextView
        android:id="@+id/m_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_or_m"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/fp_message"/>

    <EditText
        android:id="@+id/et_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_fp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/fp_btn_forgotpass_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        android:layout_below="@id/et_forgot_pass"
        android:layout_centerHorizontal="true"
        android:background="@drawable/forgor_pass_btn_bg_color"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/back_tv_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textColor="@color/blue"
        android:text="@string/back"
        android:layout_below="@id/fp_btn_forgotpass_page"/>
</RelativeLayout>