<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="295dp"
            android:layout_height="207dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_app" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:textSize="30dp"
            android:padding="15dp"
            android:textColor="@color/Black"
            android:layout_centerHorizontal="true"
            android:text="@string/app_welcome"/>

        <Button
            android:id="@+id/main_Activity_logib_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/btn_login"
            android:text="@string/Log_in"
            android:textColor="@color/White"
            android:textSize="20dp" />

        <Button
            android:id="@+id/main_Activity_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_signin"
            android:layout_below="@id/main_Activity_logib_btn"
            android:text="@string/sign_in"/>
    </RelativeLayout>
</ScrollView>