<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".product_all_detail">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_click_alldetail_order_page_cardview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/Category_list_main_Relative_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flower_shopbycategory"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/product_details_all_product_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_centerHorizontal="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:text="@string/productName"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/product_details_all_productrealprice_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Category_list_product_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="130"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/product_details_all_productdiscount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Category_list_product_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="50"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textSize="17dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/Category_list_product_name"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="% off"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textSize="17dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="RS"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/green" />


                        <TextView
                            android:id="@+id/product_details_all_product_price_tv"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="10dp" android:layout_height="wrap_content"
                            android:layout_below="@id/Category_list_product_rating"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:text="1000" android:textColor="@color/green"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            app:tabIndicatorColor="@color/White"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/description" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:background="@color/blue"
                android:layout_height="wrap_content"
                android:text="@string/specification" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:background="@color/blue"
                android:layout_height="wrap_content"
                android:text="@string/more_ingo" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_page_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</android.support.design.widget.CoordinatorLayout>